MDEV-17928 Conversion from TIMESTAMP to VARCHAR SP variables does not work well on fractional digits